Need refactor one test for YesNoPlugin